# SCPPSocket

./: CMakeLists.txt  Connection.cpp  Lib4Unity.cpp  Message.cpp  NetManager.cpp  NetManager.h  NetManagerWorker.cpp  NetManagerWorker.h  NetManagerWorkerClient.cpp  NetManagerWorkerServer.cpp  SCPPSocket.cpp  SCPPSocket.h  SCPPSocketDelegate.h  SCPPSocketFactory.cpp  SCPPSocketFactory.h  SCPPSocketFactoryMac.cpp  SCPPSocketFactoryMac.h  SCPPSocketFactoryWin.cpp  SCPPSocketFactoryWin.h  SCPPSocketMac.cpp  SCPPSocketMac.h  SCPPSocketWin.cpp  SCPPSocketWin.h  SocketUtil.cpp  TCPClientConnection.cpp  TCPClientNetManagerWorkerMac.cpp  TCPClientNetManagerWorkerMac.h  TCPConnection.cpp  TCPServerNetManagerWorkerMac.cpp  TCPServerNetManagerWorkerMac.h  library.cpp  library.h
Android/: SCPPSocketAndroid.cpp  SCPPSocketFactoryAndroid.cpp  TCPClientNetManagerWorkerAndroid.cpp  TCPServerNetManagerWorkerAndroid.cpp
IOS/: SCPPSocketIOS.cpp
Linux/: SCPPSocketFactoryLinux.cpp  SCPPSocketFactoryLinux.h  SCPPSocketLinux.cpp  SCPPSocketLinux.h  TCPClientNetManagerWorkerLinux.cpp  TCPClientNetManagerWorkerLinux.h  TCPServerNetManagerWorkerLinux.cpp  TCPServerNetManagerWorkerLinux.h
Mac/: SCPPSocketMac.cpp  TCPClientNetManagerWorkerMac.cpp  TCPClientNetManagerWorkerMac.h  TCPServerNetManagerWorkerMac.cpp  TCPServerNetManagerWorkerMac.h
Win/: SCPPSocketWin.cpp  TCPClientNetManagerWorkerWin.cpp  TCPClientNetManagerWorkerWin.h  TCPServerNetManagerWorkerWin.cpp  TCPServerNetManagerWorkerWin.h
